# alesh

./: .gitignore  CONTRIBUTING.md  LICENSE_FILE  README.md  pre-commit-config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/alesh/: __init__.py
