[tool.poetry]
name = "alesh"
version = "0.1.0"
description = "A new and improved custom-made version of the well-known SSH, also known as the Secure Shell."
authors = ["FrostiiWeeb"]
license = "GPLv3"
readme = "README.md"
packages = [
    { include = "alesh", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
